--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -116,3 +116,106 @@ header{
 #main-container .a{
     text-align: center;
 }
+#ll{
+    max-width: 1140px;
+    width: 100%;
+    margin: 130px auto;
+    height: 300px;
+    background-image: url('../images/gradient2.png'), url('../images/watch.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 10px;
+}
+#ll .kk{
+    width: 460px;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    margin-left: 64px;
+}
+#ll .kk h1{
+    color: #FFFFFF;
+    font-size: 40px;
+    margin-bottom: 24px;
+    font-weight: bold;
+}
+#ll .kk button, .s{
+    width: 160px;
+    color: #F15B22;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 21px 36px;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    cursor: pointer;
+}
+#ll{
+    display: flex;
+    align-items: center;
+}
+#n .head{
+    background-color: #151414;
+    max-width: 1600px;
+    width: 100%;
+    display: flex;
+    gap: 331px;
+}
+#n .head .g{
+    width: 585px;
+    margin-top: 130px;
+    margin-bottom: 130px;
+    margin-left: 230px;
+}
+#n .head .g ul{
+    display: flex;
+    list-style: none;
+    gap: 18px;
+}
+#n .head .g h1{
+    color: #F8F8F8;
+    font-size: 45px;
+    font-weight: bold;
+    margin-bottom: 16px;
+}
+#n .head .g .r{
+    color: #FFFFFF;
+    font-size: 16px;
+    line-height: 26px;
+    margin-bottom: 24px;
+}
+#n .head .g .r1{
+    color: #FFFFFF;
+    font-size: 16px;
+    line-height: 26px;
+    margin-bottom: 16px;
+}
+#n .head .g .r2{
+    color: #FFFFFF;
+    font-size: 16px;
+    line-height: 26px;
+    margin-bottom: 32px;
+}
+#n .head .h{
+    width: 325px;
+    margin-top: 130px;
+    margin-right: 230px;
+    margin-bottom: 243px;
+}
+#n .head .h h3{
+    color: #FFFFFF;
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 31px;
+}
+
+#n .head .h p{
+    color: #F3F3F3;
+    font-size: 18px;
+    padding-left: 21px;
+    padding-top: 21px;
+    padding-bottom: 21px;
+    padding-right: 110px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    border: 1px solid white;
+}
